--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "drf-spectacular (>=0.28.0,<0.29.0)",
     "python-telegram-bot (>=22.3,<23.0)",
     "django-redis (>=5.4.0,<6.0.0)",
+    "xlsxwriter (>=3.2.0,<4.0.0)",
 ]
 
 
